<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('questions', function (Blueprint $table) {
        $table->id();
        $table->foreignId('quiz_id')->constrained('quiz')->onDelete('cascade');
        $table->text('texte');
        $table->string('type'); // qcm, vrai_faux, texte_libre
        $table->integer('points')->default(1);
        $table->integer('ordre')->default(1);
        $table->text('correction_attendue')->nullable()->after('texte');
        $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('questions');
    }
};
