@startuml
title Diagramme de classes - Sprint 3 : Quiz, évaluations et correction IA

skinparam backgroundColor #FFFFFF
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam dpi 160
skinparam nodesep 70
skinparam ranksep 80

skinparam class {
  BackgroundColor #F8FAFC
  BorderColor #334155
  ArrowColor #334155
  FontColor #0F172A
  FontSize 11
}

skinparam package {
  BackgroundColor #FFFFFF
  BorderColor #CBD5E1
  FontColor #0F172A
  FontStyle bold
}

left to right direction

' ===================================================
' 1. CONTEXTE UTILISATEUR ET MODULE
' ===================================================
package "Contexte de formation" {

class User {
  + id : int
  + prenom : string
  + nom : string
  + email : string
  + role : string
  --
  + formations()
  + inscriptions()
}

class ModuleFormation {
  + id : int
  + formation_id : int
  + titre : string
  + description : text
  + duree : int
  + ordre : int
  --
  + formation()
  + contenus()
  + quiz()
}

}

' ===================================================
' 2. STRUCTURE DU QUIZ
' ===================================================
package "Structure du quiz" {

class Quiz {
  + id : int
  + module_id : int
  + titre : string
  + description : text
  + seuil_reussite : int
  + duree_minutes : int
  + nb_tentatives_max : int
  + statut : string
  --
  + module()
  + questions()
  + tentatives()
  + tentativesPour(userId : int)
}

class Question {
  + id : int
  + quiz_id : int
  + texte : text
  + type : string
  + points : int
  + ordre : int
  + correction_attendue : text
  --
  + quiz()
  + choix()
}

class ChoixReponse {
  + id : int
  + question_id : int
  + texte : string
  + est_correct : boolean
  + ordre : int
  --
  + question()
}

}

' ===================================================
' 3. PASSAGE DU QUIZ
' ===================================================
package "Passage et réponses" {

class TentativeQuiz {
  + id : int
  + quiz_id : int
  + user_id : int
  + score : float
  + score_max : int
  + reussi : boolean
  + duree_secondes : int
  + termine_le : datetime
  --
  + quiz()
  + user()
  + reponses()
}

class ReponseApprenant {
  + id : int
  + tentative_id : int
  + question_id : int
  + choix_id : int
  + reponse_texte : text
  + est_correct : boolean
  + score_ia : float
  + feedback_ia : text
  + points_forts : text
  + points_amelioration : text
  + points_obtenus : float
  --
  + tentative()
  + question()
  + choix()
}

}

' ===================================================
' 4. CORRECTION IA
' ===================================================
package "Correction IA" {

class GlmCorrectionService <<service>> {
  + corrigerReponseLibre(
      question : string,
      reponse : string,
      correctionAttendue : string,
      contexte : string,
      pointsMax : int
    ) : array
}

}

' ===================================================
' RELATIONS PRINCIPALES
' ===================================================

ModuleFormation "1" --> "0..1" Quiz : contient

Quiz "1" *-- "1..*" Question : contient
Question "1" *-- "0..*" ChoixReponse : propose

User "1" --> "0..*" TentativeQuiz : passe
Quiz "1" --> "0..*" TentativeQuiz : reçoit

TentativeQuiz "1" *-- "1..*" ReponseApprenant : contient
Question "1" --> "0..*" ReponseApprenant : reçoit
ReponseApprenant "0..*" --> "0..1" ChoixReponse : choix sélectionné

ReponseApprenant ..> GlmCorrectionService : correction IA\nsi réponse libre

' ===================================================
' NOTES EXPLICATIVES
' ===================================================

note bottom of Question
Types de questions :
- QCM
- Vrai / Faux
- Réponse libre

Pour les réponses libres :
- correction_attendue
- points
- correction IA possible
end note

note bottom of ReponseApprenant
Résultat de correction :
- est_correct
- points_obtenus
- score_ia
- feedback_ia
- points_forts
- points_amelioration
end note

note right of GlmCorrectionService
Service utilisé pour corriger
les réponses libres et produire :
- score
- feedback
- points forts
- points à améliorer
end note

' ===================================================
' ORGANISATION VISUELLE
' ===================================================

User -[hidden]down- ModuleFormation
Quiz -[hidden]down- Question
Question -[hidden]down- ChoixReponse
TentativeQuiz -[hidden]down- ReponseApprenant

@enduml